--- a/PokemonGo/WpfApp2/Battle.xaml
+++ b/PokemonGo/WpfApp2/Battle.xaml
@@ -20,10 +20,10 @@
         <Rectangle Fill="Black" HorizontalAlignment="Left" Height="9" Margin="31,50,0,0" VerticalAlignment="Top" Width="279" RadiusX="5" RadiusY="5" Opacity="0.5"/>
         <Rectangle Fill="Orange" HorizontalAlignment="Left" Height="9" Margin="75,50,0,0" VerticalAlignment="Top" Width="235" RadiusX="5" RadiusY="5"/>
         <Rectangle Fill="LightGreen" HorizontalAlignment="Left" Height="9" Margin="162,50,0,0" VerticalAlignment="Top" Width="149" RadiusX="5" RadiusY="5"/>
-        <Image Margin="124,255,511.6,35" gif:ImageBehavior.AnimatedSource="Images/battle/back.gif"/>
+        <Image Margin="124,255,511.6,35" gif:ImageBehavior.AnimatedSource="Images/egg.gif"/>
 
         <!--Gyms' pokemon-->
-        <Image Margin="531,123,119.6,154" gif:ImageBehavior.AnimatedSource="Images/battle/front.gif" Stretch="None" VerticalAlignment="Bottom"/>
+        <Image Margin="531,123,119.6,154" gif:ImageBehavior.AnimatedSource="Images/egg.gif" Stretch="None" VerticalAlignment="Bottom"/>
         <TextBlock Foreground="#FFFFFF" HorizontalAlignment="Left" Margin="479,17,0,0" TextWrapping="Wrap" Text="Vaporeon" VerticalAlignment="Top" Height="33" Width="288" FontSize="20" FontWeight="Bold" TextAlignment="Right"/>
         <TextBlock Foreground="#FFFFFF" HorizontalAlignment="Left" Margin="668,64,0,0" TextWrapping="Wrap" Text="5842" VerticalAlignment="Top" Height="23" Width="99" FontSize="16" FontWeight="Medium" TextAlignment="Right"/>
         <Rectangle Fill="Black" HorizontalAlignment="Left" Height="9" Margin="488,50,0,0" VerticalAlignment="Top" Width="279" RadiusX="5" RadiusY="5" Opacity="0.5"/>
@@ -57,7 +57,7 @@
                     </DockPanel>
                     <Rectangle Stroke="#FF16E7DA" HorizontalAlignment="Center" Height="60" RadiusY="5" RadiusX="5" Width="60">
                         <Rectangle.Fill>
-                            <ImageBrush ImageSource="battle_poke_1.gif" Stretch="None">
+                            <ImageBrush ImageSource="Images/egg.gif" Stretch="None">
                                 <ImageBrush.RelativeTransform>
                                     <TransformGroup>
                                         <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleX="0.8" ScaleY="0.8"/>
@@ -77,7 +77,7 @@
                     </DockPanel>
                     <Rectangle Stroke="#FF16E7DA" HorizontalAlignment="Center" Height="60" RadiusY="5" RadiusX="5" Width="60">
                         <Rectangle.Fill>
-                            <ImageBrush ImageSource="Pokemon(ToBeUsed)/Charmanderee.gif">
+                            <ImageBrush ImageSource="Images/pokemon/Charmanderee.gif">
                                 <ImageBrush.RelativeTransform>
                                     <TransformGroup>
                                         <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleX="0.8" ScaleY="0.8"/>
