--- a/PokemonGo/WpfApp2/PokemonSingleViewTiny.xaml
+++ b/PokemonGo/WpfApp2/PokemonSingleViewTiny.xaml
@@ -3,8 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d"
-             >
+             mc:Ignorable="d">
     <StackPanel>
         <DockPanel Margin="5,0,0,5">
             <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="CP" Width="16" FontSize="10" FontWeight="Light"/>
@@ -12,7 +11,7 @@
         </DockPanel>
         <Rectangle Stroke="#FF16E7DA" HorizontalAlignment="Center" Height="60" RadiusY="5" RadiusX="5" Width="60">
             <Rectangle.Fill>
-                <ImageBrush ImageSource="battle_poke_1.gif" Stretch="None">
+                <ImageBrush ImageSource="Images/egg.gif" Stretch="None">
                     <ImageBrush.RelativeTransform>
                         <TransformGroup>
                             <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleX="0.8" ScaleY="0.8"/>
