--- a/PokemonGo/WpfApp2/manage.xaml
+++ b/PokemonGo/WpfApp2/manage.xaml
@@ -5,7 +5,9 @@
         xmlns:pokemongo="clr-namespace:PokemonGo" xmlns:controls="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
         Title="Manage Pokemon/Collection" Height="450" Width="800">
     <Grid>
-        <Image Margin="0,0,0,0" Source="PgXHOnv.png" Stretch="Fill" />
+        <Grid.Background>
+            <ImageBrush Stretch="UniformToFill" ImageSource="Images/manage/background.png"/>
+        </Grid.Background>
         <ScrollViewer HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" Width="250">
             <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Width="231" Height="410">
                 <TextBlock TextWrapping="Wrap" Margin="0,0,0,20">Scrolling is enabled when it is necessary. 
@@ -68,18 +70,15 @@
                 </StackPanel>
             </Button>
             <Grid HorizontalAlignment="Center" Width="150" Height="150" Margin="0,-110,0,0" VerticalAlignment="Top">
-                <Image x:Name="SelectedPokemonImage" gif:ImageBehavior.AnimatedSource="Images/battle/front.gif" HorizontalAlignment="Center" VerticalAlignment="Bottom" Stretch="None" Width="140" Height="140"/>
+                <Image x:Name="SelectedPokemonImage" gif:ImageBehavior.AnimatedSource="Images/egg.gif" HorizontalAlignment="Center" VerticalAlignment="Bottom" Stretch="None" Width="140" Height="140"/>
             </Grid>
         </Grid>
-        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="307,306,372.6,0" TextWrapping="Wrap" Text="STARDUST" VerticalAlignment="Top" Height="18" FontSize="16" Width="114"/>
-        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="307,282,372.6,0" TextWrapping="Wrap" Text="CANDY" VerticalAlignment="Top" Height="18" FontSize="16" Width="114"/>
-        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="550,305,104.6,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="139" Text="Ember"/>
-        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="706,307,45.6,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="42" Text="10"/>
-        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="550,282,104.6,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="139" Text="Flamethrower"/>
-        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="706,282,45.6,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="42" Text="50"/>
-
-
-
-        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="426,306,273.6,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="94" Text="5000"/>
+        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="301,342,385,0" TextWrapping="Wrap" Text="STARDUST" VerticalAlignment="Top" Height="18" FontSize="16" Width="114"/>
+        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="301,318,385,0" TextWrapping="Wrap" Text="CANDY" VerticalAlignment="Top" Height="18" FontSize="16" Width="114"/>
+        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="544,341,117,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="139" Text="Ember"/>
+        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="700,343,58,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="42" Text="10"/>
+        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="544,318,117,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="139" Text="Flamethrower"/>
+        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="700,318,58,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="42" Text="50"/>
+        <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="420,342,286,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="94" Text="5000"/>
     </Grid>
 </Page>
