--- a/PokemonGo/WpfApp2/manage.xaml
+++ b/PokemonGo/WpfApp2/manage.xaml
@@ -8,24 +8,48 @@
         <Grid.Background>
             <ImageBrush Stretch="UniformToFill" ImageSource="Images/manage/background.png"/>
         </Grid.Background>
+        
+        
         <ScrollViewer HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" Width="250">
             <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Width="231" Height="410">
                 <TextBlock Foreground="#FFFFFF" TextWrapping="Wrap" HorizontalAlignment="Center" FontSize="16" Margin="0,20,0,0" Text="POKÉMON"/>
                 <TextBlock x:Name="PlayerPokemonAmount" Foreground="#FFFFFF" TextWrapping="Wrap" HorizontalAlignment="Center" FontSize="12" Margin="0,5,0,20" Text="9999"/>
-                <controls:UniformGrid Columns="3">
-
-
-                    <Button BorderThickness="0" Background="{x:Null}" VerticalAlignment="Bottom" HorizontalAlignment="Left">
-                        <pokemongo:PokemonSingleViewTiny PokemonName="Pokemon Name" PokemonCP="1234"/>
-                    </Button>
-                    <Button BorderThickness="0" Background="{x:Null}" VerticalAlignment="Bottom" HorizontalAlignment="Left">
-                        <pokemongo:PokemonSingleViewTiny PokemonName="Pokemon Name" PokemonCP="1234"/>
-                    </Button>
-
-
-                </controls:UniformGrid>
+                <ItemsControl Name="PlayerPokemonList" Margin="10">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <controls:UniformGrid Columns="3"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Button BorderThickness="0" Background="{x:Null}" VerticalAlignment="Bottom" HorizontalAlignment="Left">
+                                <StackPanel>
+                                    <DockPanel Margin="5,0,0,5">
+                                        <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="CP" Width="16" FontSize="10" FontWeight="Light"/>
+                                        <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="{Binding Path=GetCP}" FontSize="14" FontWeight="Medium"/>
+                                    </DockPanel>
+                                    <Rectangle Stroke="#FF16E7DA" HorizontalAlignment="Center" Height="60" RadiusY="5" RadiusX="5" Width="60">
+                                        <Rectangle.Fill>
+                                            <ImageBrush ImageSource="{Binding Path=GetImageLocation}" Stretch="None">
+                                                <ImageBrush.RelativeTransform>
+                                                    <TransformGroup>
+                                                        <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleX="0.8" ScaleY="0.8"/>
+                                                    </TransformGroup>
+                                                </ImageBrush.RelativeTransform>
+                                            </ImageBrush>
+                                        </Rectangle.Fill>
+                                    </Rectangle>
+                                    <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="{Binding Path=Name}" FontSize="10" FontWeight="Light" HorizontalAlignment="Center" Margin="0,5,0,0"/>
+                                </StackPanel>
+                                <!--<pokemongo:PokemonSingleViewTiny PokemonName="Name" PokemonCP="1234"/>-->
+                            </Button>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
             </StackPanel>
         </ScrollViewer>
+        
+        
         <Grid x:Name="GridChangePokemon" Margin="0,0,30,30" VerticalAlignment="Bottom" HorizontalAlignment="Right">
             <DockPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-135,0,0">
                 <TextBlock Foreground="#FFFFFF" Text="CP" FontSize="16" VerticalAlignment="Bottom" Margin="0,0,5,2"/>
@@ -71,7 +95,7 @@
                     <Image Source="Images/manage/sell.png" Width="120" Height="32"/>
                 </StackPanel>
             </Button>
-            <Button BorderThickness="0" Background="{x:Null}" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,15.4" Grid.Column="1" Click="Button_Click">
+            <Button BorderThickness="0" Background="{x:Null}" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,15.4" Grid.Column="1" Click="ButtonClickLeave">
                 <StackPanel>
                     <Image Source="Images/button/tick.png" Width="30" Height="30" />
                 </StackPanel>
