--- a/PokemonGo/WpfApp2/manage.xaml
+++ b/PokemonGo/WpfApp2/manage.xaml
@@ -22,7 +22,7 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Button BorderThickness="0" Background="{x:Null}" VerticalAlignment="Bottom" HorizontalAlignment="Left">
+                            <Button BorderThickness="0" Background="{x:Null}" VerticalAlignment="Bottom" HorizontalAlignment="Left" Click="ButtonClickSelectPokemon">
                                 <StackPanel>
                                     <DockPanel Margin="5,0,0,5">
                                         <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="CP" Width="16" FontSize="10" FontWeight="Light"/>
@@ -30,7 +30,7 @@
                                     </DockPanel>
                                     <Rectangle Stroke="#FF16E7DA" HorizontalAlignment="Center" Height="60" RadiusY="5" RadiusX="5" Width="60">
                                         <Rectangle.Fill>
-                                            <ImageBrush ImageSource="{Binding Path=GetImageLocation}" Stretch="None">
+                                            <ImageBrush ImageSource="{Binding Path=GetImageLocation}" Stretch="Uniform">
                                                 <ImageBrush.RelativeTransform>
                                                     <TransformGroup>
                                                         <ScaleTransform CenterY="0.5" CenterX="0.5" ScaleX="0.8" ScaleY="0.8"/>
