--- a/PokemonGo/WpfApp2/manage.xaml
+++ b/PokemonGo/WpfApp2/manage.xaml
@@ -8,8 +8,8 @@
         <Grid.Background>
             <ImageBrush Stretch="UniformToFill" ImageSource="Images/manage/background.png"/>
         </Grid.Background>
-        
-        
+
+
         <ScrollViewer HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" Width="250">
             <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Width="231" Height="410">
                 <TextBlock Foreground="#FFFFFF" TextWrapping="Wrap" HorizontalAlignment="Center" FontSize="16" Margin="0,20,0,0" Text="POKÉMON"/>
@@ -48,8 +48,8 @@
                 </ItemsControl>
             </StackPanel>
         </ScrollViewer>
-        
-        
+
+
         <Grid x:Name="GridChangePokemon" Margin="0,0,30,30" VerticalAlignment="Bottom" HorizontalAlignment="Right">
             <DockPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-135,0,0">
                 <TextBlock Foreground="#FFFFFF" Text="CP" FontSize="16" VerticalAlignment="Bottom" Margin="0,0,5,2"/>
@@ -111,5 +111,7 @@
         <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="544,318,117,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="139" Text="Flamethrower"/>
         <TextBlock Foreground="#45686e" HorizontalAlignment="Center" Margin="700,318,58,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="42" Text="50"/>
         <TextBlock x:Name="PlayerStardustAmount" Foreground="#45686e" HorizontalAlignment="Center" Margin="420,342,286,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="94" Text="8888"/>
+        <TextBlock x:Name="stardust" Foreground="white" HorizontalAlignment="Center" Margin="654,9,61,0" TextWrapping="Wrap" Text="STARDUST" VerticalAlignment="Top" Height="18" FontSize="16" Width="85"/>
+        <TextBlock x:Name="stardustAmount" Foreground="white" HorizontalAlignment="Center" Margin="735,9,-29,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="94" Text="8888"/>
     </Grid>
 </Page>
