--- a/PokemonGo/WpfApp2/Navigation.xaml
+++ b/PokemonGo/WpfApp2/Navigation.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:controls="http://schemas.microsoft.com/netfx/2009/xaml/presentation" xmlns:pokemongo="clr-namespace:PokemonGo"
-      mc:Ignorable="d"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable="d"
         Title="Navigation" Height="450" Width="800" FocusManager.FocusedElement="{Binding ElementName=NavigationCanvas}">
     <Canvas Name="NavigationCanvas" KeyDown="Nav_KeyDown" Focusable="True">
         <Canvas.Background>
@@ -14,19 +14,5 @@
         <Image x:Name="home" Source="Images/navigation/hometext.png" HorizontalAlignment="Left" Canvas.Left="317" Canvas.Top="216" Height="39" VerticalAlignment="Top" Width="68"/>
         <TextBlock x:Name="debug1" TextWrapping="Wrap" Text="TextBlock" Canvas.Left="317" Canvas.Top="168" RenderTransformOrigin="-2,-5.562"/>
         <TextBlock x:Name="debug2" TextWrapping="Wrap" Text="TextBlock" Canvas.Left="316" Canvas.Top="190"/>
-        <ItemsControl x:Name="PlayerPokemonList" Margin="10">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <controls:UniformGrid Columns="3"/>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <Button BorderThickness="0" Background="{x:Null}" VerticalAlignment="Bottom" HorizontalAlignment="Left">
-                        <pokemongo:PokemonSingleViewTiny PokemonName="{Binding Path=Name}" PokemonCP="1234"/>
-                    </Button>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
     </Canvas>
 </Page>
