--- a/PokemonGo/WpfApp2/manage.xaml
+++ b/PokemonGo/WpfApp2/manage.xaml
@@ -9,8 +9,8 @@
             <ImageBrush Stretch="UniformToFill" ImageSource="Images/manage/background.png"/>
         </Grid.Background>
 
-        <ScrollViewer HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" Width="250">
-            <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Width="231" Height="410">
+        <ScrollViewer HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" Width="260" Margin="0,0,0,0">
+            <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Width="240" Height="370">
 
                 <TextBlock Foreground="#FFFFFF" TextWrapping="Wrap" HorizontalAlignment="Center" FontSize="16" Margin="0,20,0,0" Text="POKÉMON"/>
                 <TextBlock x:Name="PlayerPokemonAmount" Foreground="#FFFFFF" TextWrapping="Wrap" HorizontalAlignment="Center" FontSize="12" Margin="0,5,0,20" Text="9999"/>
@@ -117,7 +117,7 @@
         <TextBlock x:Name="stardustAmount" Foreground="white" HorizontalAlignment="Center" Margin="735,9,-29,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="94" Text="8888"/>
         <TextBlock x:Name="atkmv3" Foreground="#45686e" HorizontalAlignment="Center" Margin="544,364,117,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="139" Text="Flamethrower"/>
         <TextBlock x:Name="atkdmg3" Foreground="#45686e" HorizontalAlignment="Center" Margin="700,364,58,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="42" Text="50"/>
-        <Image x:Name="exitButton" Source="Images/button/tick.png" RenderTransformOrigin="-2.833,0.333" Margin="104,396,666,23.6" MouseDown="exitButton_MouseDown" />
+        <Image x:Name="exitButton" Source="Images/button/tick.png" RenderTransformOrigin="-2.833,0.333" Margin="107,396,663,23.6" MouseDown="exitButton_MouseDown" />
         <TextBlock x:Name="pokemonHeight" Foreground="#45686e" HorizontalAlignment="Center" Margin="421,318,285,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="94" Text="8888"/>
     </Grid>
 </Page>
