--- a/PokemonGo/WpfApp2/manage.xaml
+++ b/PokemonGo/WpfApp2/manage.xaml
@@ -2,17 +2,17 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:gif="http://wpfanimatedgif.codeplex.com"
-        xmlns:pokemongo="clr-namespace:PokemonGo" xmlns:controls="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
+        xmlns:controls="http://schemas.microsoft.com/netfx/2009/xaml/presentation"
         Title="Manage Pokemon/Collection" Height="450" Width="800">
     <Grid>
         <Grid.Background>
             <ImageBrush Stretch="UniformToFill" ImageSource="Images/manage/background.png"/>
         </Grid.Background>
 
-        <ScrollViewer HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" VerticalAlignment="Top" Width="260" Height="380" Margin="10,0,0,0">
-            <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Width="240">
+        <ScrollViewer HorizontalScrollBarVisibility="Auto" HorizontalAlignment="Left" VerticalAlignment="Top" Width="250" Height="390" Margin="15,0,0,0">
+            <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Width="230">
                 <TextBlock Foreground="#FFFFFF" TextWrapping="Wrap" HorizontalAlignment="Center" FontSize="16" Margin="0,20,0,0" Text="POKÉMON"/>
-                <TextBlock x:Name="PlayerPokemonAmount" Foreground="#FFFFFF" TextWrapping="Wrap" HorizontalAlignment="Center" FontSize="12" Margin="0,5,0,20" Text="9999"/>
+                <TextBlock x:Name="PlayerPokemonAmount" Foreground="#FFFFFF" TextWrapping="Wrap" HorizontalAlignment="Center" FontSize="12" Margin="0,0,0,5" Text="9999"/>
                 <ItemsControl Name="PlayerPokemonList" Margin="10">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
@@ -38,9 +38,8 @@
                                             </ImageBrush>
                                         </Rectangle.Fill>
                                     </Rectangle>
-                                    <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="{Binding Path=Name}" FontSize="10" FontWeight="Light" HorizontalAlignment="Center" Margin="0,5,0,0"/>
+                                    <TextBlock Foreground="#FFFFFF" VerticalAlignment="Bottom" TextWrapping="Wrap" Text="{Binding Path=Name}" FontSize="10" FontWeight="Light" Height="25" HorizontalAlignment="Center" Margin="0,5,0,0"/>
                                 </StackPanel>
-                                <!--<pokemongo:PokemonSingleViewTiny PokemonName="Name" PokemonCP="1234"/>-->
                             </Button>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
@@ -49,7 +48,7 @@
         </ScrollViewer>
 
 
-        <Grid x:Name="GridChangePokemon" Margin="0,0,30,30" VerticalAlignment="Bottom" HorizontalAlignment="Right">
+        <Grid x:Name="GridChangePokemon" Margin="0,0,30,30" Width="500" VerticalAlignment="Bottom" HorizontalAlignment="Right">
             <DockPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-135,0,0">
                 <TextBlock Foreground="#FFFFFF" Text="CP" FontSize="16" VerticalAlignment="Bottom" Margin="0,0,5,2"/>
                 <TextBlock x:Name="SelectedPokemonCP" Foreground="#FFFFFF" Text="8888" FontSize="22" VerticalAlignment="Bottom"/>
@@ -105,11 +104,11 @@
         <TextBlock x:Name="atkmv1" Foreground="#45686e" HorizontalAlignment="Center" Margin="544,318,117,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="30" FontSize="16" Width="139" Text="Flamethrower"/>
         <TextBlock x:Name="atkdmg1" Foreground="#45686e" HorizontalAlignment="Center" Margin="700,318,58,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="42" Text="50"/>
         <TextBlock x:Name="pokemonWeight" Foreground="#45686e" HorizontalAlignment="Center" Margin="420,342,286,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" FontSize="16" Width="94" Text="8888"/>
-        <TextBlock x:Name="stardust" Foreground="white" HorizontalAlignment="Center" Margin="654,9,61,0" TextWrapping="Wrap" Text="STARDUST" VerticalAlignment="Top" Height="18" FontSize="16" Width="85"/>
-        <TextBlock x:Name="stardustAmount" Foreground="white" HorizontalAlignment="Center" Margin="735,9,-29,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="94" Text="8888"/>
+        <TextBlock x:Name="stardust" Foreground="white" HorizontalAlignment="Center" Margin="597,9,118,0" TextWrapping="Wrap" Text="STARDUST" VerticalAlignment="Top" Height="18" FontSize="16" Width="85"/>
+        <TextBlock x:Name="stardustAmount" Foreground="white" HorizontalAlignment="Right" Margin="0,9,40,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Text="8888"/>
         <TextBlock x:Name="atkmv3" Foreground="#45686e" HorizontalAlignment="Center" Margin="544,364,117,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="30" FontSize="16" Width="139" Text="Flamethrower"/>
         <TextBlock x:Name="atkdmg3" Foreground="#45686e" HorizontalAlignment="Center" Margin="700,364,58,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="42" Text="50"/>
-        <Image x:Name="exitButton" Source="Images/button/tick.png" RenderTransformOrigin="-2.833,0.333" Margin="107,396,663,23.6" MouseDown="exitButton_MouseDown" />
+        <Image x:Name="exitButton" Source="Images/button/tick.png" RenderTransformOrigin="-2.833,0.333" Margin="116,396,654,23.6" MouseDown="exitButton_MouseDown" />
         <TextBlock x:Name="pokemonHeight" Foreground="#45686e" HorizontalAlignment="Center" Margin="421,318,285,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="94" Text="8888"/>
     </Grid>
 </Page>
