--- a/PokemonGo/WpfApp2/manage.xaml
+++ b/PokemonGo/WpfApp2/manage.xaml
@@ -78,12 +78,12 @@
                     <Image Source="Images/manage/evolve.png" Width="120" Height="32"/>
                 </StackPanel>
             </Button>
-            <Button x:Name="ButtonPowerup" BorderThickness="0" Background="{x:Null}" Margin="24,48,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Click="ButtonClickPowerUp" Opacity="0.5">
+            <Button x:Name="ButtonPowerup" BorderThickness="0" Background="{x:Null}" Margin="24,32,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Click="ButtonClickPowerUp" Opacity="0.5">
                 <StackPanel>
-                    <Image Source="Images/manage/powerup.png" Width="120" Height="32"/>
+                    <Image x:Name="ButtonPowerup1" Source="Images/manage/powerup.png" Width="120" Height="32"/>
                 </StackPanel>
             </Button>
-            <Button x:Name="ButtonRename" BorderThickness="0" Background="{x:Null}" Margin="0,48,24,0" VerticalAlignment="Top" HorizontalAlignment="Right" Click="ButtonClickRename" Opacity="0.5">
+            <Button x:Name="ButtonRename" BorderThickness="0" Background="{x:Null}" Margin="0,32,24,0" VerticalAlignment="Top" HorizontalAlignment="Right" Click="ButtonClickRename" Opacity="0.5">
                 <StackPanel>
                     <Image Source="Images/manage/rename.png" Width="120" Height="32"/>
                 </StackPanel>
@@ -97,18 +97,18 @@
                 <Image x:Name="SelectedPokemonImage" gif:ImageBehavior.AnimatedSource="Images/egg.gif" HorizontalAlignment="Center" VerticalAlignment="Bottom" Stretch="None" Width="140" Height="140"/>
             </Grid>
         </Grid>
-        <TextBlock x:Name="weightText" Foreground="#45686e" HorizontalAlignment="Center" Margin="301,342,385,0" TextWrapping="Wrap" Text="WEIGHT" VerticalAlignment="Top" Height="29" FontSize="16" Width="114"/>
-        <TextBlock x:Name="heightText" Foreground="#45686e" HorizontalAlignment="Center" Margin="301,318,385,0" TextWrapping="Wrap" Text="HEIGHT" VerticalAlignment="Top" Height="26" FontSize="16" Width="114"/>
+        <TextBlock x:Name="weightText" Foreground="#45686e" HorizontalAlignment="Center" Margin="297,368,389,0" TextWrapping="Wrap" Text="WEIGHT" VerticalAlignment="Top" Height="29" FontSize="16" Width="114"/>
+        <TextBlock x:Name="heightText" Foreground="#45686e" HorizontalAlignment="Center" Margin="297,344,389,0" TextWrapping="Wrap" Text="HEIGHT" VerticalAlignment="Top" Height="26" FontSize="16" Width="114"/>
         <TextBlock x:Name="atkmv2" Foreground="#45686e" HorizontalAlignment="Center" Margin="544,341,117,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="31" FontSize="16" Width="139" Text="Ember"/>
         <TextBlock x:Name="atkdmg2" Foreground="#45686e" HorizontalAlignment="Center" Margin="700,341,58,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="42" Text="10"/>
         <TextBlock x:Name="atkmv1" Foreground="#45686e" HorizontalAlignment="Center" Margin="544,318,117,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="30" FontSize="16" Width="139" Text="Flamethrower"/>
         <TextBlock x:Name="atkdmg1" Foreground="#45686e" HorizontalAlignment="Center" Margin="700,318,58,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="42" Text="50"/>
-        <TextBlock x:Name="pokemonWeight" Foreground="#45686e" HorizontalAlignment="Center" Margin="420,342,286,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" FontSize="16" Width="94" Text="8888"/>
+        <TextBlock x:Name="pokemonWeight" Foreground="#45686e" HorizontalAlignment="Center" Margin="416,368,290,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="35" FontSize="16" Width="94" Text="8888"/>
         <TextBlock x:Name="stardust" Foreground="white" HorizontalAlignment="Center" Margin="597,9,118,0" TextWrapping="Wrap" Text="STARDUST" VerticalAlignment="Top" Height="18" FontSize="16" Width="85"/>
         <TextBlock x:Name="stardustAmount" Foreground="white" HorizontalAlignment="Right" Margin="0,9,40,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Text="8888"/>
         <TextBlock x:Name="atkmv3" Foreground="#45686e" HorizontalAlignment="Center" Margin="544,364,117,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="30" FontSize="16" Width="139" Text="Flamethrower"/>
         <TextBlock x:Name="atkdmg3" Foreground="#45686e" HorizontalAlignment="Center" Margin="700,364,58,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="42" Text="50"/>
         <Image x:Name="exitButton" Source="Images/button/tick.png" RenderTransformOrigin="-2.833,0.333" Margin="116,396,654,23.6" MouseDown="exitButton_MouseDown" />
-        <TextBlock x:Name="pokemonHeight" Foreground="#45686e" HorizontalAlignment="Center" Margin="421,318,285,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="94" Text="8888"/>
+        <TextBlock x:Name="pokemonHeight" Foreground="#45686e" HorizontalAlignment="Center" Margin="417,344,289,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" FontSize="16" Width="94" Text="8888"/>
     </Grid>
 </Page>
