--- a/PokemonGo/WpfApp2/Welcome.xaml
+++ b/PokemonGo/WpfApp2/Welcome.xaml
@@ -5,10 +5,14 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Welcome" Background="Aquamarine">
+      Title="Welcome">
     <Grid x:Name="GridMain">
-        <TextBlock HorizontalAlignment="Left" FontSize ="30" Margin="176,89,0,0" TextWrapping="Wrap" VerticalAlignment="Top"><Run Text="Welcome! To start the game, "/><LineBreak/><Run Text="enter your name below and press enter"/><LineBreak/><Run Text="//will go to navigation view"/></TextBlock>
+        <Grid.Background>
+            <ImageBrush ImageSource="Images/background.jpg"  Stretch="UniformToFill"/>
+        </Grid.Background>
+        <TextBlock HorizontalAlignment="Left" FontSize ="30" Margin="116,133,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="609"><Run Text="Welcome! To start the game, "/><LineBreak/><Run Text="Name your character below and press enter:"/><LineBreak/></TextBlock>
         <TextBlock x:Name="exitbutton" HorizontalAlignment="Left" FontSize ="30" Margin="732,38,0,0" TextWrapping="Wrap" VerticalAlignment="Top" MouseLeftButtonDown="exitbutton_MouseLeftButtonDown"><Run Text="X"/><LineBreak/><Run/></TextBlock>
-        <TextBox x:Name="yourname" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Margin="376,222,0,0" KeyDown="TextBox_KeyDown"/>
+        <TextBox x:Name="yourname" HorizontalAlignment="Left" Height="35" TextWrapping="Wrap" VerticalAlignment="Top" Width="162" Margin="334,256,0,0" KeyDown="TextBox_KeyDown"/>
+        <Image Source="Images/navigation/playericon.png" HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="100" Margin="220,219,0,0"/>
     </Grid>
 </Page>
