--- a/PokemonGo/WpfApp2/manage.xaml
+++ b/PokemonGo/WpfApp2/manage.xaml
@@ -122,7 +122,7 @@
         <Grid x:Name="RenamePrompt" Margin="238,139,209,187" Visibility="Hidden">
             <Rectangle Fill="#07f7c3" HorizontalAlignment="Left" Height="124" RadiusY="5" RadiusX="5" VerticalAlignment="Top" Width="353"/>
             <TextBlock x:Name="heightText_Copy" Foreground="#000000" HorizontalAlignment="Center" Margin="35,8,37,0" TextWrapping="Wrap" Text="Type in the name for your pokemon:" VerticalAlignment="Top" Height="26" FontSize="16" Width="281"/>
-            <TextBox x:Name="renamebox" HorizontalAlignment="Left" FontSize="" Height="41" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="173" RenderTransformOrigin="0.8,2.391" Margin="22,49,0,0"/>
+            <TextBox x:Name="renamebox" HorizontalAlignment="Left" FontSize="20" Height="41" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="173" RenderTransformOrigin="0.8,2.391" Margin="22,49,0,0"/>
             <Button Content="Confirm" Background="Aqua" HorizontalAlignment="Left" VerticalAlignment="Top" Width="110" Margin="215,55,0,0" Height="32" Click="Button_Click"/>
         </Grid>
     </Grid>
