--- a/PokemonGo/WpfApp2/manage.xaml
+++ b/PokemonGo/WpfApp2/manage.xaml
@@ -98,7 +98,7 @@
                 <Image x:Name="SelectedPokemonImage" gif:ImageBehavior.AnimatedSource="Images/egg.gif" HorizontalAlignment="Center" VerticalAlignment="Bottom" Stretch="None" Width="140" Height="140"/>
             </Grid>
             <Image Source="Images/manage/Stardust.png" HorizontalAlignment="Left" Height="26" VerticalAlignment="Top" Width="21" Margin="48,66,0,0"/>
-            <Image Source="Stardust.png" HorizontalAlignment="Left" Height="26" VerticalAlignment="Top" Width="22" Margin="48,123,0,0" RenderTransformOrigin="-0.143,1.25"/>
+            <Image x:Name="evolvesd" Source="Stardust.png" HorizontalAlignment="Left" Height="26" VerticalAlignment="Top" Width="22" Margin="48,123,0,0" RenderTransformOrigin="-0.143,1.25"/>
             <Image x:Name="sellicon" Source="Stardust.png" HorizontalAlignment="Left" Height="26" VerticalAlignment="Top" Width="22" Margin="385,123,0,0" RenderTransformOrigin="-0.143,1.25"/>
             <Image x:Name="sellicon_Copy" Source="Stardust.png" HorizontalAlignment="Left" Height="26" VerticalAlignment="Top" Width="22" Margin="481,-166,-3,0" RenderTransformOrigin="-0.143,1.25"/>
         </Grid>
